New in Coin v2.0.0a (so far):
- NB: v2.0 is *far* ahead in the future
- NB: this is an unstable source repository we don't release Coin from
* This Coin branch is now under the GPL license
* Inventor/C/ include hierarchy for C ADTs in Coin
* multithread support primitive data types
* added man-page coin-config.1
* the usual bugfixes, optimizations and documentation updates
* more standard build setup for generated documentation
* debian package setup
* rpm package setup
* verified support for Mac OS X / Darwin platforms
* new SoTransparencyType node, with support for setting SoTransparencyType
  in the scene graph.
* exports base class SbClip for general polygon clipping routines

New in Coin v1.0 (2001-08-13):
* speedy Cygwin builds with new, simpler wrapmsvc.exe compiler wrapper
* SoOffscreenRenderer::writeToPostscript(fp, pagesize)
* minor bugfixes
* minor documentation updates

New in Coin v1.0 final beta (2001-07-22):
- beta release made for the Web3D SDK CD, for SIGGRAPH 2001 distribution
* full Open Inventor 2.1 source code compatibility
* miscellaneous extensions:
  - SoPolygonOffset node
  - SoImage node
  - SoExtSelection node
  - SoMarkerSet node
  - SoClipPlaneManip manipulator
  - SoMouseButtonEvent::BUTTON4, BUTTON5 for wheelmouse events
  - SoKeyboardEvent::DELETE is portable even for MS Windows
  - SoAction::IN_PATH is portable even for HPUX
  - SoCamera::setStereoMode()
  - SoCamera::pointAt(target, upvector);
  - SbImage class
  - SoGLRenderAction::SORTED_OBJECT_SORTED_TRIANGLE_* transparency modes
  - SoGLRenderAction::addPreRenderCallback()/removePreRenderCallback()
  - SoCallbackAction::setViewportRegion()/getViewportRegion().
  - SoInput::searchForFile()
  - SoInput::isFileVRML1() / isFileVRML2() (soon)
  - SoOffscreenRenderer::writeToFile() and friends
  - SoFile::getFullName()
  - and more [to be mapped down later]