@@ -2,7 +2,7 @@
  *
  *  This file is part of the Coin 3D visualization library.
  *  Copyright (C) 1998-2001 by Systems in Motion.  All rights reserved.
- *  
+ *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU General Public License
  *  version 2 as published by the Free Software Foundation.  See the
@@ -29,6 +29,10 @@
   This field is used where nodes, engines or other field containers
   needs to store a group of multiple 32-bit integer values.
 
+  This field supports application data sharing through a
+  setValuesPointer() method. See SoMField documentation for
+  information on how to use this function.
+
   \sa SoSFInt32
 */
 
@@ -41,6 +45,8 @@
 
 
 SO_MFIELD_SOURCE_MALLOC(SoMFInt32, int32_t, int32_t);
+
+SO_MFIELD_SETVALUESPOINTER_SOURCE(SoMFInt32, int32_t, int32_t);
 
 
 // Override from parent.
