@@ -2,7 +2,7 @@
  *
  *  This file is part of the Coin 3D visualization library.
  *  Copyright (C) 1998-2001 by Systems in Motion.  All rights reserved.
- *  
+ *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU General Public License
  *  version 2 as published by the Free Software Foundation.  See the
@@ -26,6 +26,10 @@
   \brief The SoMFUShort class is a container for unsigned short integer values.
   \ingroup fields
 
+  This field supports application data sharing through a
+  setValuesPointer() method. See SoMField documentation for
+  information on how to use this function.
+
   FIXME: write class doc
 */
 
@@ -38,6 +42,8 @@
 
 
 SO_MFIELD_SOURCE_MALLOC(SoMFUShort, unsigned short, unsigned short);
+
+SO_MFIELD_SETVALUESPOINTER_SOURCE(SoMFUShort, unsigned short, unsigned short);
 
 // Override from parent class.
 void
