@@ -13,6 +13,7 @@ New in Coin v2.0.0a (so far):
 * new SoTransparencyType node, with support for setting SoTransparencyType
   in the scene graph.
 * exports base class SbClip for general polygon clipping routines
+* application data sharing through SoMField::setValuesPointer()
 
 New in Coin v1.0 (2001-08-13):
 * speedy Cygwin builds with new, simpler wrapmsvc.exe compiler wrapper
